testsuite/tests/grammar/invalid_lkt/invalid_decl.lkt
import lexer_example
import common

@with_lexer(foo_lexer) grammar foo_grammar {
    @main_rule main_rule <- Example("example")
    @with_lexer(foo_lexer) grammar unexpected_decl {
        @main_rule main_rule <- Example("example")
    }
}
